--- a/workoutbuddies.html
+++ b/workoutbuddies.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
-        <h1 id="title">Workout Buddies</h1>
+        <h1 class="title">Workout Buddies</h1>
+        <p><a href="form.html">Workout Entry</a></p>
     </body>
 </html>
