--- a/workoutbuddies.html
+++ b/workoutbuddies.html
@@ -9,6 +9,6 @@
 
     <body>
         <h1 class="title">Workout Buddies</h1>
-        <p><a href="form.html">Workout Entry</a></p>
+        <a href="form.html">Workout entry</a>
     </body>
 </html>
