added placeholders to fields

--- a/form.html
+++ b/form.html
@@ -18,11 +18,11 @@
         <form id="form1" action="submitted.php" method="GET">
             <div class="field">
                 <label>Your Name:</label>
-                <input name="name" type="text" size="30">
+                <input name="name" type="text" size="30" placeholder="First Name">
             </div>
             <div class="field">
                 <label>Workout Duration:</label>
-                <input name="duration" type="text" size="30">
+                <input name="duration" type="text" size="30" placeholder="Time taken for workout">
             </div>
             <div class="field">
                 <label>Date:</label>
@@ -30,7 +30,7 @@
             </div>
             <div class="field">
                 <label>Description:</label>
-                <input name="name" type="textarea">
+                <input name="name" type="textarea" placeholder="Activity, Sets, and Reps">
             </div>
             <button type = "submit">Submit</button>
         </form>
