added table to main page

--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
             <p>Enter the details of your workout in the form below</p>
         </div>
 
-        <form id="form1" action="submitted.php" method="GET">
+        <form id="form1" action="results.html" method="GET">
             <div class="field">
                 <label>Your Name:</label>
                 <input name="name" type="text" size="30" placeholder="First Name">
