--- a/workoutbuddies.html
+++ b/workoutbuddies.html
@@ -9,6 +9,17 @@
 
     <body>
         <h1 class="title">Workout Buddies</h1>
-        <a href="form.html">Workout entry</a>
+        <a href="form.html">Workout entry</a><br><br>
+        <table id="data_table">
+            <tr>
+                <th>Name</th>
+                <th>Workouts this week</th>
+                <th>Average workouts per week</th>
+            </tr>
+        </table>
+
+        <script>
+            
+        </script>
     </body>
 </html>
