--- a/results.html
+++ b/results.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <div id="results"></div>
+    <a href="workoutbuddies.html">Back to Leaderboard</a>
+    <script>
+        const resultsList = document.getElementById('results')
+        new URLSearchParams(window.location.search).forEach((value, name) => {
+            resultsList.append(`${name}: ${value}`)
+            resultsList.append(document.createElement('br'))
+        })
+    </script>
 </body>
 </html>
