--- a/results.html
+++ b/results.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Results</title>
 </head>
 <body>
-    <div id="results"></div>
+    <h1 class="title">Workout Buddies</h1>
     <a href="workoutbuddies.html">Back to Leaderboard</a>
+    <div id="results"></div>
     <script>
         const resultsList = document.getElementById('results')
         new URLSearchParams(window.location.search).forEach((value, name) => {
