Back to php now with mysql

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
             <p>Enter the details of your workout in the form below</p>
         </div>
 
-        <form id="form1" action="results.html" method="GET">
+        <form id="form1" action="connect.php" method="POST">
             <div class="field">
                 <label>Your Name:</label>
                 <input name="name" type="text" size="30" placeholder="First Name">
@@ -29,7 +29,7 @@
             </div>
             <div class="field">
                 <label>Description:</label>
-                <input name="name" type="textarea" placeholder="Activity, Sets, and Reps">
+                <input name="description" type="textarea" placeholder="Activity, Sets, and Reps">
             </div>
             <button type = "submit">Submit</button>
         </form>
