--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
             <p>Enter the details of your workout in the form below</p>
         </div>
 
-        <form id="form1" action="connect.php" method="POST">
+        <form id="form1" action="add.php" method="POST">
             <div class="field">
                 <label>Your Name:</label>
                 <input name="name" type="text" size="30" placeholder="First Name" required>
