basic code done

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1 class="title">Workout Buddies</h1>
-        <a href="workoutbuddies.html">Leaderboard</a>
+        <a href="table.php">Leaderboard</a>
         <div>
             <p>Enter the details of your workout in the form below</p>
         </div>
